--- a/Agent File/backend/requirements.txt
+++ b/Agent File/backend/requirements.txt
@@ -1,7 +1,7 @@
 fastapi==0.109.0
 uvicorn[standard]==0.27.0
 gunicorn==21.2.0
-sqlalchemy==2.0.25
+sqlalchemy>=2.0.36
 psycopg2-binary==2.9.9
 pydantic>=2.10.0
 pydantic-settings>=2.7.0
