--- a/.gitignore
+++ b/.gitignore
@@ -1,71 +1,28 @@
-# Shepherd AI - .gitignore
-
-# Dependencies
-node_modules/
-venv/
-__pycache__/
-*.pyc
-*.pyo
-*.pyd
-
-# Environment variables (SENSITIVE!)
-.env
-.env.local
-.env.production
-*.env
-
-# Database
-*.db
-*.sqlite
-*.sqlite3
-
-# WhatsApp session data (SENSITIVE!)
-tokens/
-.wwebjs_auth/
-.wwebjs_cache/
-
-# IDE
-.vscode/
-.idea/
-*.swp
-*.swo
-*~
-
-# OS
-.DS_Store
-Thumbs.db
-*.log
-
-# Build outputs
-dist/
-build/
-*.exe
-*.dmg
-*.app
-
-# Python
-*.egg-info/
-.pytest_cache/
-.coverage
-
-# Temp files
-*.tmp
-*.temp
-temp/
-tmp/
-
 # Logs
-logs/
+logs
 *.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
 
-# Supabase credentials
-supabase/.env
+node_modules
+dist
+dist-ssr
+*.local
 
-# API Keys (NEVER COMMIT!)
-**/secrets/
-**/credentials/
-**/*_key.json
-**/*-key.json
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+.idea
+.DS_Store
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+
+# Token files (browser sessions)
+tokens/
+*/tokens/
