--- a/shepherd-bridge-app/package.json
+++ b/shepherd-bridge-app/package.json
@@ -21,6 +21,7 @@
         "files": [
             "electron-main.js",
             "bridge-core.js",
+            "bridge-polling.js",
             "preload.js",
             "ui/**/*",
             "node_modules/**/*",
