--- a/shepherd-cloud-bridge/package.json
+++ b/shepherd-cloud-bridge/package.json
@@ -5,7 +5,8 @@
     "main": "index.js",
     "scripts": {
         "start": "node index.js",
-        "dev": "nodemon index.js"
+        "dev": "nodemon index.js",
+        "postinstall": "node node_modules/puppeteer/install.mjs || true"
     },
     "keywords": [
         "whatsapp",
@@ -19,7 +20,8 @@
         "axios": "^1.6.0",
         "express": "^4.18.2",
         "dotenv": "^16.3.1",
-        "ws": "^8.14.2"
+        "ws": "^8.14.2",
+        "puppeteer": "^23.11.1"
     },
     "devDependencies": {
         "nodemon": "^3.0.1"
