fix: include group-manager.js in bridge build files

--- a/shepherd-bridge-app/package.json
+++ b/shepherd-bridge-app/package.json
@@ -22,6 +22,7 @@
             "electron-main.js",
             "bridge-core.js",
             "bridge-polling.js",
+            "group-manager.js",
             "preload.js",
             "ui/**/*",
             "node_modules/**/*",
